2008-03-28  Johnny Jacob  <jjohnny@novell.com>

	* tasque.mdp: Added EDS Backend into mdp.

2008-03-14  Boyd Timothy <btimothy@gmail.com> 

	* configure.ac: Fixed a problem in the logic where the icecore backend
	  wasn't being evaluated.  The user/builder would only see this when
	  specifying only icecore as the backend.  In this case, the only thing
	  that would happen is that it would also cause RTM to be built.

2008-03-14  Boyd Timothy <btimothy@gmail.com> 

	* src/Backends/IceCore/IceTask.cs: Make the task priorities match up with
	  ICEcore so that 1=1, 2=2, 3=3, and None=5.

2008-03-14  Boyd Timothy <btimothy@gmail.com> 

	* src/Makefile.am: Build Tasque.exe before building any Backends.

2008-03-13  Boyd Timothy <btimothy@gmail.com> 

	* src/Application.cs: Do better checking when checking for types in a
	  backend dll so Tasque doesn't crash when there are problems.
	* src/Backends/IceCore/Makefile.am, src/Backends/Makefile.am,
	  src/Makefile.am: Modify the makefiles to build IceCore.Backend.dll
	  instead of packaging it directly inside Tasque.exe.
	* configure.ac: Add src/Backends/Makefile and src/Backends/IceCore/Makefile.

2008-03-13  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* src/TaskWindow.cs: When focusing on the Add Task field, clear our
	  "New task..." text.  Restore this text if field is empty when
	  unfocused.  Empty field after creating a new task.  Text color in
	  field appears insensitive when field is not focused, if default
	  "New task..." text is there.

2008-03-13  Boyd Timothy <btimothy@gmail.com> 

	* src/Application.cs, src/TaskWindow.cs: Change the code so that when the
	  user selects "New task..." from the tray icon, it will open the task
	  window and put their cursor in the new task entry widget instead of just
	  create a task called "New task..."

2008-03-13  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* src/Utilities.cs, src/TaskTreeView.cs: Moved ParseTaskText method
	  from TaskTreeView to Utilities.